--- a/files/conclusao.tex
+++ b/files/conclusao.tex
@@ -1,3 +1,4 @@
-\chapter{Conclusion}
+\chapter{Conclusão}
 
-\lipsum[1]
+Parte final do trabalho, apresenta as conclusões correspondentes aos objetivos
+ou hipóteses.
