--- a/files/dedicatoria_agradecimentos.tex
+++ b/files/dedicatoria_agradecimentos.tex
@@ -3,18 +3,20 @@
     %\noindent
     \hfill
     \begin{minipage}{.6\textwidth}
-     I dedicate this dissertation to ...
+     Dedico essa dissertação a todas que lutaram para que eu estivesse aqui. 
     \end{minipage}
 \end{dedicatoria}
  
 \begin{agradecimentos}
-    I thanks to my advisor, my family, my colleagues from the course.  
-
+    Lembre de agradecer a quem te apoiou, como, por exemplo, orientador,
+    família, agência de fomento, professores conselheiros. 
 \end{agradecimentos}
 
 \begin{epigrafe}
 \vspace*{\fill}
+
 \begin{flushright}
+    \hspace{7.5cm}
     \textit{
         ``If your experiment needs a statistician, you need a better
         experiment.''} \\
