--- a/files/errata.tex
+++ b/files/errata.tex
@@ -1,3 +1,16 @@
 \begin{errata}
 
+\begin{table}[htb]
+    \center
+    \footnotesize
+    \begin{tabular}{|p{1.4cm}|p{1cm}|p{3cm}|p{3cm}|}
+    \hline
+    \textbf{Folha} & \textbf{Linha} & \textbf{Onde se lê} &
+    \textbf{Leia-se}\\
+    \hline
+    17 & 8 & Matemtica & Matemática \\
+    \hline
+    \end{tabular}
+\end{table}
+
 \end{errata}
