--- a/files/ficha_catalografica.tex
+++ b/files/ficha_catalografica.tex
@@ -4,27 +4,28 @@
 	\begin{center}					
 	\fbox{\begin{minipage}[c][8cm]{13.5cm}		% Largura
 	\small
+	Ficha catalográfica elaborada pela BMHS/FGV \\
+
 	%\imprimirautor
 	Sobrenome, Nome % Paginas com as citações na bibl
 	
-	\hspace{0.5cm} \imprimirtitulo  / \imprimirautor. -- \imprimirdata.
+	\hspace{0.5cm} \imprimirtitulo: \imprimirsubtitulo  / \imprimirautor. -- \imprimirdata.
 	
 	\hspace{0.5cm} \thelastpage f.\\
 		
 	\hspace{0.5cm}
-	\parbox[t]{\textwidth}{\imprimirtipotrabalho~--~School of Applied
-	Mathematics.}\\
+	\parbox[t]{\textwidth}{\imprimirtipotrabalho~--~Escola de Matemática Aplicada.}\\
 	
 	\hspace{0.5cm} Advisor: \imprimirorientador .
 
-	\hspace{0.5cm} Includes bibliography.
+	\hspace{0.5cm} Includes bibliography. \\
 	
 	\hspace{0.5cm}
 		1. Matemática
 		2. Aplicada
 		2. na matemática
 		I. Sobrenome professor, Nome professor
-		II. School of Applied Mathematics.
+		II. Escola de Matemática Aplicada
 		III. \imprimirtitulo 			
 	\end{minipage}}
 	\end{center}
