--- a/files/folha_aprovacao.tex
+++ b/files/folha_aprovacao.tex
@@ -5,23 +5,23 @@
   
       \vspace*{\fill}\vspace*{\fill}
       \begin{center}
-        \ABNTEXchapterfont\bfseries\large\MakeUppercase{\imprimirtitulo}	
+        \ABNTEXchapterfont\bfseries\large\MakeUppercase{\imprimirtitulo}\normalfont\MakeUppercase{:
+        \imprimirsubtitulo}	
       \end{center}
       \vspace*{\fill}
       
       \hfill
       \begin{minipage}{.7\textwidth}
-          Bachelor dissertation presented to the School of Applied Mathematics
-          (FGV/EMAp). Study area: Bayesian statistics. \\ \\
-          Approved on December 21st, 2021 \\
-          By the organizing committee
+          \imprimirpreambulo \\ \\
+          E aprovado em 21/12/2021 \\
+          Pela comissão organizadora
       \end{minipage}%
       \vspace*{\fill}
      \end{center}
   
-     \assinatura{\imprimirorientador \\ School of Applied Mathematics} 
-     \assinatura{Professor \\ Convidado 1}
-     \assinatura{Professor \\ Convidado 2}
+     \assinatura{\imprimirorientador \\ Escola de Matemática Aplicada} 
+     \assinatura{Convidado 1 \\ Instituição 1}
+     \assinatura{Convidado 2 \\ Instituição 2}
      %\assinatura{\textbf{Professor} \\ Convidado 3}
      %\assinatura{\textbf{Professor} \\ Convidado 4}
 \end{folhadeaprovacao}
