--- a/files/resumo.tex
+++ b/files/resumo.tex
@@ -7,13 +7,18 @@
  precedido da referência do documento, com exceção do resumo inserido no
  próprio documento. (\ldots) As palavras-chave devem figurar logo abaixo do
  resumo, antecedidas da expressão Palavras-chave:, separadas entre si por
- ponto e finalizadas também por ponto.
+ ponto e finalizadas também por ponto. Deve ser redigido na terceira
+ pessoa do singular e quanto a sua extensão, o resumo deve ter de 150 a 500
+ palavras.
 
- \textbf{Palavras-chave}: latex. abntex. editoração de texto.
+ Palavras-chave: latex. abntex. editoração de texto.
 \end{resumo}
 
 \begin{resumo}[Abstract]
  \begin{otherlanguage*}{english}
-   This is the english abstract.
+  É a tradução do resumo para o inglês (Abstract), com a finalidade de facilitar a
+  divulgação do trabalho em nível internacional.
  \end{otherlanguage*}
+
+ Keywords: latex. abntex. editoração de texto.
 \end{resumo}
