--- a/files/desenvolvimento.tex
+++ b/files/desenvolvimento.tex
@@ -1,5 +1,5 @@
-\chapter{Development}
+\chapter{Desenvolvimento}
 
-\lipsum[3]
-
-\cite{Robert2007}
+Corresponde ao corpo do trabalho, contendo a exposição ordenada e pormemorizada
+do assunto. Constam aqui a revisão de literatura, metodologia adotada, os resultados e
+sua discussão. Divide-se em seções e subseções. \cite{Robert2007}
