--- a/trabalho/files/desenvolvimento.tex
+++ b/trabalho/files/desenvolvimento.tex
@@ -1,5 +1,5 @@
 \chapter{Desenvolvimento}
 
-Corresponde ao corpo do trabalho, contendo a exposição ordenada e pormemorizada
+Corresponde ao corpo do trabalho, contendo a exposição ordenada e pormenorizada
 do assunto. Constam aqui a revisão de literatura, metodologia adotada, os resultados e
 sua discussão. Divide-se em seções e subseções. \cite{Robert2007}
