Comments out micro type package for English version.

--- a/versao_ingles/trabalho-academico.tex
+++ b/versao_ingles/trabalho-academico.tex
@@ -39,7 +39,11 @@
 \usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc}
 \usepackage{lmodern}
-\usepackage{microtype} % para melhorias de justificação
+% The 'microtype' package may cause compilation errors with 
+% abntex2 in some environments.
+% This may get fixed at some point, so you may uncomment
+% this line and test it if you wish.
+% \usepackage{microtype} % para melhorias de justificação
 \usepackage{indentfirst}
 \usepackage{csquotes}
 
